--- a/Pages/Profile.cshtml
+++ b/Pages/Profile.cshtml
@@ -2,3 +2,64 @@
 @model YoublogProject.Pages.ProfileModel
 @{
 }
+
+<style>
+    .profile-card {
+        border-radius: 10px;
+        overflow: hidden;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        background-color: #d3d7dd
+    }
+
+    .avatar {
+        width: 100%;
+        height: auto;
+    }
+
+    .profile-header {
+        color: #fff;
+        padding: 20px;
+        text-align: center;
+        font-weight: bold;
+    }
+
+    .profile-info {
+        padding: 20px;
+    }
+
+    .profile-info span {
+        text-align: right;
+    }
+</style>
+
+
+<div style="margin-top: 100px">
+
+<<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="card profile-card">
+                <img src="/media/namdung.jpg" class="card-img-top avatar" alt="Avatar">
+            </div>
+        </div>
+        <div class="col-md-8">
+            <div class="card profile-card">
+                <div class="card-header profile-header bg-dark">
+                    <h3>My Profile</h3>
+                </div>
+                <div class="card-body profile-info">
+                    <h3>Username: <span class="text-secondary">Your username</span></h3>
+                    <h3>Password: <span class="text-secondary">Your password</span></h3>
+                    <h3>Email: <span class="text-secondary">Your email</span></h3>
+                    <h3>Full Name: <span class="text-secondary">Your full name</span></h3>
+                    <h3>Date of Birth: <span class="text-secondary">Your date of birth</span></h3>
+                    <h3>Gender: <span class="text-secondary">Your gender</span></h3>
+                    <h3>Address: <span class="text-secondary">Your address</span></h3>
+                    <h3>Phone Number: <span class="text-secondary">Your phone number</span></h3>
+                    <h3>Created At: <span class="text-secondary">Date when account was created</span></h3>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
