--- a/Pages/Signup.cshtml
+++ b/Pages/Signup.cshtml
@@ -3,13 +3,50 @@
 @{
 }
 
-<div>
-    <div class="col-md-8 mx-auto rounded border p-3">
-        <h2 class="text-center mb-5">Signup</h2>
+<style>
+    .vh-100 {
+        height: 100vh;
+    }
+
+    .login-form {
+        background-color: #fff;
+        color: #000;
+        border-radius: 10px;
+    }
+
+    .form-group {
+        margin-bottom: 1.5rem;
+    }
+
+    .form-control {
+        border-color: #000;
+    }
+
+    .form-check-label {
+        color: #fff;
+    }
+
+    .btn-light {
+        color: #000;
+        background-color: #fff;
+        border-color: #fff;
+    }
+
+        .btn-light:hover {
+            color: #fff;
+            background-color: #000;
+            border-color: #000;
+        }
+
+</style>
+
+<div class="vh-100 d-flex align-items-center">
+    <div class="login-form shadow-lg col-md-8 mx-auto bg-dark border p-3">
+        <h2 class="text-center mb-5 fw-bolder text-white">Sign up</h2>
 
         @if (Model.errorMessage.Length > 0)
         {
-            <div role="alert" class="alert alert-danger alert-dismissible fade show">
+            <div role="alert" class="alert alert-danger alert-dismissible fade show mx-5 mb-5">
                 <strong>@Model.errorMessage</strong>
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
@@ -22,66 +59,65 @@
             </div>
         }
 
-        <form method="post" enctype="multipart/form-data">
-            <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Username</label>
-                <input class="form-control" asp-for="UserDto.Username" />
+        <form class="mx-5" method="post" enctype="multipart/form-data">
+            <div class="form-group">
+                <input placeholder="Username" class="form-control" asp-for="UserDto.Username" />
                 <span asp-validation-for="UserDto.Username" class="text-danger"></span>
             </div>
 
-            <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Password</label>
-                <input class="form-control" asp-for="UserDto.Password" type="password" />
+            <div class="form-group">
+                <input placeholder="Password" class="form-control" asp-for="UserDto.Password" type="password" />
                 <span asp-validation-for="UserDto.Password" class="text-danger"></span>
             </div>
 
-            <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Email</label>
-                <input class="form-control" asp-for="UserDto.Email" />
+            <div class="form-group">
+                <input placeholder="Email" class="form-control" asp-for="UserDto.Email" />
                 <span asp-validation-for="UserDto.Email" class="text-danger"></span>
             </div>
 
-            <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Full Name</label>
-                <input class="form-control" asp-for="UserDto.FullName" />
+            <div class="form-group">
+                <input placeholder="Fullname" class="form-control" asp-for="UserDto.FullName" />
                 <span asp-validation-for="UserDto.FullName" class="text-danger"></span>
             </div>
 
-            <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Phone Number</label>
-                <input class="form-control" asp-for="UserDto.PhoneNumber" />
+            <div class="form-group">
+                <input placeholder="Phone Number" class="form-control" asp-for="UserDto.PhoneNumber" />
                 <span asp-validation-for="UserDto.PhoneNumber" class="text-danger"></span>
             </div>
 
-            <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Gender</label>
-                <div class="form-check">
-                    <input type="radio" class="form-check-input" id="male" asp-for="UserDto.Gender" value="male" checked>
-                    <label class="form-check-label" for="male">Male</label>
-                </div>
-                <div class="form-check">
-                    <input type="radio" class="form-check-input" id="female" asp-for="UserDto.Gender" value="female">
-                    <label class="form-check-label" for="female">Female</label>
-                </div>
-                <div class="form-check">
-                    <input type="radio" class="form-check-input" id="other" asp-for="UserDto.Gender" value="other">
-                    <label class="form-check-label" for="other">Other</label>
-                </div>
-                <span asp-validation-for="UserDto.FullName" class="text-danger"></span>
-            </div>
-
-            <div class="row mb-3">
-                <label class="col-sm-4 col-form-label">Date of birth</label>
-                <input class="form-control" asp-for="UserDto.DateOfBirth" type="date"/>
+            <div class="form-group">
+                <input placeholder="Date of Birth" class="form-control" asp-for="UserDto.DateOfBirth" type="date" />
                 <span asp-validation-for="UserDto.DateOfBirth" class="text-danger"></span>
             </div>
 
-            <div class="row mb-3">
+            <div class="form-group">
+                <div class="d-flex align-items-center ">
+                    <label class="col-sm-4 col-form-label text-light">Gender</label>
+                    <div class="d-flex align-items-center w-100 justify-content-between">
+                        <div class="form-check">
+                            <input type="radio" class="form-check-input" id="male" asp-for="UserDto.Gender" value="male" checked>
+                            <label class="form-check-label text-white" for="male">Male</label>
+                        </div>
+                        <div class="form-check">
+                            <input type="radio" class="form-check-input" id="female" asp-for="UserDto.Gender" value="female">
+                            <label class="form-check-label text-white" for="female">Female</label>
+                        </div>
+                        <div class="form-check">
+                            <input type="radio" class="form-check-input" id="other" asp-for="UserDto.Gender" value="other">
+                            <label class="form-check-label text-white" for="other">Other</label>
+                        </div>
+                    </div>
+                </div>
+                <span asp-validation-for="UserDto.Gender" class="text-danger"></span>
+            </div>
+
+            <div class="form-group mt-5">
                 <div class="offset-sm-4 col-sm-4 d-grid">
-                    <button class="btn btn-primary" type="submit">Signup</button>
+                    <button class="btn btn-lg btn-light fw-bold" type="submit">Signup</button>
                 </div>
             </div>
         </form>
     </div>
 </div>
+
 
