--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -49,7 +49,35 @@ html {
 .story {
     height: 200px;
     width: 150px;
+    position: relative;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: all ease-in-out 0.1s;
+}
+
+.story:hover {
+    height: 210px;
+    width: 160px;
+    cursor: pointer;
+}
+
+.story-image {
+    height: 100%;
+    width: 100%;
     object-fit: cover;
+}
+
+.story .avatar-circle {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.story span{
+    position: absolute;
+    bottom: 3px;
+    left: 10px;
+    z-index: 1;
+    width: fit-content;
 }
 
 .post-action div {
@@ -59,6 +87,7 @@ html {
     gap: 10px;
     padding: 10px;
     width: 100%;
+    transition: all ease-in-out 0.2s;
 }
 
     .post-action div:hover {
