--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                             }
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                            <li><a class="dropdown-item" asp-area="" asp-page="/Profile">My Profile</a></li>
+                            <li><a class="dropdown-item" href="/Profile?id=@user.UserId">My Profile</a></li>
                             <li><a class="dropdown-item" asp-area="" asp-page="/Friends/Index">My Friends</a></li>
                             <li><a class="dropdown-item" asp-area="" asp-page="/Logout">Logout</a></li>
                         </ul>
