MyPost, Filter UI

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -19,12 +19,19 @@
         @for (var i = 0; i < 6; i++)
         {
             <div class="post border shadow">
-                <div class="d-flex align-items-center gap-3 px-3 pt-3">
+                <div class="d-flex w-100 justify-content-between align-items-center px-3 pt-3">
+
+                <div class="d-flex align-items-center gap-3">
                     <img class="avatar-circle" src="~/media/namdung.jpg" />
                     <div class="d-flex flex-column align-items-baseline">
                         <span class="name">Nam Dung</span>
                         <i>02/20/2024</i>
                     </div>
+                </div>
+
+                <div>
+                        <i class="fa-solid fa-user fa-lg"></i>
+                </div>
                 </div>
                 <div class="text-start mt-3 px-3">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ut pulvinar odio, non rutrum nisi. Vivamus sed pretium elit. Suspendisse iaculis blandit nunc sed vehicula. Etiam faucibus fringilla mauris quis consequat. Morbi pharetra elit ac massa rutrum laoreet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque congue neque eu elit pulvinar pellentesque. Integer sagittis ac eros congue mattis. Quisque vel dolor orci. Donec commodo neque et est suscipit, at ultrices ligula pharetra. Nulla at nulla non arcu laoreet venenatis. Donec ultrices dui turpis, accumsan cursus ex sodales eget.
